# trident-c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  ReadMe.MD
docs/: spec.md
example/: erLex.tir  lexer.tri
src/: main.c  trident.c
src/ast/: ast.c  ast.h
src/error/: error.c  error.h
src/lexer/: analyser.c  digits.c  direvtive.c  keyword.c  lexer.c  lexer.h  lexeri.h  token.c  token.h
src/parser/: parser.c  parser.h  parseri.c  parseri.h
src/token/: token.c  token.h
src/util/: util.c  util.h
src/utils/: utils.c  utils.h
